--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=calisthenics
-server.port=8080
+server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:5432/postgres
-spring.datasource.username=postgres.ujbskgmuoteogvskegnd
+# Database Configuration - Uses Railway environment variables
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:5432/postgres}
+spring.datasource.username=${DB_USERNAME:postgres.ujbskgmuoteogvskegnd}
 spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
@@ -13,11 +14,11 @@ spring.jpa.show-sql=true
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=${OAUTH_REDIRECT_URI:http://localhost:8080/login/oauth2/code/google}
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:your-secret-key-min-256-bits-long-please-change-this-in-production-environment}
 jwt.expiration=86400000
 
-# CORS Configuration
-cors.allowed-origins=http://localhost:8081
+# CORS Configuration - Supports multiple origins separated by comma
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:8081}
