--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -4,7 +4,6 @@ buildCommand = "./gradlew clean bootJar"
 
 [deploy]
 startCommand = "java -jar build/libs/calisthenics-0.0.1-SNAPSHOT.jar"
-restartPolicyType = "on_failure"
-restartPolicyMaxRetries = 10
-web: java -jar build/libs/calisthenics-0.0.1-SNAPSHOT.jar
+restartPolicyType = "always"
+
 
