--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -18,6 +18,11 @@ repositories {
 	mavenCentral()
 }
 
+// Configure toolchain resolver to auto-download JDK if needed
+javaToolchains {
+	// Allow Gradle to download JDK if not found
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
