--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,3 +22,5 @@ jwt.expiration=86400000
 
 # CORS Configuration - Supports multiple origins separated by comma
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:8081}
+
+redirectUri=${REDIRECT_URI_CALLBACK:http://localhost:8081/auth}
